--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,8 @@
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
     "flatpickr": "^4.6.13",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "jwt-decode": "^4.0.0",
     "query-string": "^9.0.0",
     "react": "^18.2.0",
