--- a/ProcessGateway/package.json
+++ b/ProcessGateway/package.json
@@ -9,6 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "node-schedule": "^2.1.1"
+    "dayjs": "^1.11.13",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "mssql": "^11.0.1",
+    "node-schedule": "^2.1.1",
+    "nodemailer": "^6.9.16"
   }
 }
