--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,12 @@
-# Step 1: Build the React App
-FROM node:18 AS build
+# Use Node.js with Alpine Linux (lightweight alternative to Ubuntu)
+FROM node:22-alpine
+
 WORKDIR /app
 COPY package*.json ./
-RUN npm install
+RUN npm install && npm install -g vite@latest
 COPY . .
+
 RUN npm run build
 
-# Step 2: Serve the App with Nginx
-FROM nginx:alpine
-COPY --from=build /app/build /usr/share/nginx/html
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+EXPOSE 3000
+CMD ["npx", "serve", "-s", "build", "-l", "3000"]
