--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,12 +7,31 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
+    services:
+      # Set up Docker-in-Docker service so containers can be run in GitHub Actions
+      docker:
+        image: docker:19.03.12
+        options: --privileged
+        ports:
+          - 3000:3000  # Expose frontend port (if necessary)
+          - 5000:5000  # Expose backend port (if necessary)
+        volumes:
+          - /var/lib/docker
+
     steps:
-    - uses: actions/checkout@v4
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      # Step 1: Check out the code
+      - name: Check out the repository
+        uses: actions/checkout@v3
+
+      # Step 2: Set up Docker Compose
+      - name: Set up Docker Compose
+        run: sudo apt-get update && sudo apt-get install -y docker-compose
+
+      # Step 3: Build and start services with Docker Compose
+      - name: Build and start services
+        run: docker-compose -f docker-compose.yml up -d --build
+
+      
