--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
 
   frontend:
     build:
-      context: /frontend  # Path to your frontend Dockerfile
+      context: ./frontend  # Path to your frontend Dockerfile
     ports:
       - "3000:3000"  # Maps host port 80 to container port 80 (served by Nginx in this case)
     depends_on:
