--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,6 +26,13 @@ jobs:
       - name: Check out the repository
         uses: actions/checkout@v3
 
+      # Step 2: Log in to Docker Hub
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
       # Step 2: Set up Docker Compose
       - name: Set up Docker Compose
         run: sudo apt-get update && sudo apt-get install -y docker-compose
@@ -34,4 +41,7 @@ jobs:
       - name: Build and start services
         run: docker-compose -f docker-compose.yml up -d --build
 
-      
+         # Step 5: Push Docker images to Docker Hub
+      - name: Push Docker images
+        run: |
+          docker-compose -f docker-compose.yml push
