--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
   backend:
     build:
       context: ./backend  # Path to your backend Dockerfile
+      image: harhsit960/px_v2:backend  # Single repo with "backend" tag
+
     ports:
       - "10000:10000"  # Maps host port 5000 to container port 5000
     environment:
@@ -12,6 +14,8 @@ services:
   frontend:
     build:
       context: ./frontend  # Path to your frontend Dockerfile
+      image: harhsit960/px_v2:frontend  # Single repo with "backend" tag
+
     ports:
       - "3000:3000"  # Maps host port 80 to container port 80 (served by Nginx in this case)
     depends_on:
