--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,6 @@ services:
     build:
       context: ./backend  # Path to your backend Dockerfile
     image: harhsit960/px_v2:backend  # Single repo with "backend" tag
-
     ports:
       - "10000:10000" 
     environment:
@@ -15,16 +14,15 @@ services:
   frontend:
     build:
       context: ./frontend 
-      args:
-        VITE_REACT_APP_BASE_URL: $VITE_REACT_APP_BASE_URL
     image: harhsit960/px_v2:frontend  # Single repo with "backend" tag
 
     ports:
       - "3000:3000"  # Maps host port 80 to container port 80 (served by Nginx in this case)
     depends_on:
       - backend  # Ensures backend starts before frontend
-    # environment:
+    
+    environment:
       # - REACT_APP_BASE_URL=http://backend:10000 
-      # - VITE_REACT_APP_BASE_URL="${VITE_REACT_APP_BASE_URL}"
+      - VITE_REACT_APP_BASE_URL=${VITE_REACT_APP_BASE_URL}
 
     restart: unless-stopped
