--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -41,7 +41,8 @@ jobs:
       - name: Build and start services
         run: |
             export VITE_REACT_APP_BASE_URL=${{ secrets.VITE_REACT_APP_BASE_URL }}
-            docker-compose -f docker-compose.yml up -d --build
+            docker-compose build --build-arg VITE_REACT_APP_BASE_URL=$VITE_REACT_APP_BASE_URL
+            docker-compose up -d
 
          # Step 5: Push Docker images to Docker Hub
       - name: Push Docker images
